feat: 起床开始接入七牛云

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,13 +8,14 @@
         "@typescript-eslint/indent": ["error", 4],
         "linebreak-style": ["error", "unix"],
         "quotes": ["error", "single"],
-        "semi": ["error", "never"],
+        "semi": ["error", "always"],
         "eqeqeq": ["error", "smart"],
         "no-eq-null": 0,
         "no-param-reassign": 0,
         "comma-dangle": 0,
         "@typescript-eslint/no-explicit-any": 0,
         "@typescript-eslint/no-unused-vars": 0,
-        "array-bracket-spacing": 0
+        "array-bracket-spacing": 0,
+        "space-before-function-paren": 0
     }
 }
