feat: 完成音乐模块后台开发&更新其牛测试域名

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
         "skipDefaultLibCheck": true,
         "inlineSourceMap": true,
         "importHelpers": true,
-        "noImplicitThis": false
+        "noImplicitThis": false,
+        "strictNullChecks": false
     },
     "exclude": ["app/public", "app/views", "node_modules*"]
 }
