--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
         "project": "./tsconfig.json"
     },
     "rules": {
-        "indent": ["error", 4],
+        "indent": ["error", 4, { "SwitchCase": 1 }],
         "@typescript-eslint/indent": ["error", 4],
         "linebreak-style": ["error", "unix"],
         "quotes": ["error", "single"],
@@ -18,6 +18,8 @@
         "no-unused-vars": 0,
         "array-bracket-spacing": 0,
         "space-before-function-paren": 0,
-        "@typescript-eslint/no-empty-function": 0
+        "@typescript-eslint/no-empty-function": 0,
+        "one-var-declaration-per-line": 0,
+        "no-empty": 0
     }
 }
