--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
         "egg-alinode": "^2.0.1",
         "egg-cors": "^2.2.3",
         "egg-mongoose": "^3.2.0",
+        "egg-redis": "^2.4.0",
         "egg-scripts": "^2.13.0",
+        "geoip-lite": "^1.4.1",
+        "ioredis": "^4.16.3",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
         "moment": "^2.24.0",
