--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/lodash": "^4.14.149",
         "@types/moment": "^2.13.0",
         "@types/moment-timezone": "^0.5.13",
+        "@types/nodemailer": "^6.4.0",
         "@types/request": "^2.48.4",
         "egg": "^2.26.0",
         "egg-alinode": "^2.0.1",
@@ -39,6 +40,7 @@
         "lodash": "^4.17.15",
         "moment": "^2.24.0",
         "moment-timezone": "^0.5.28",
+        "nodemailer": "^6.4.6",
         "pac-proxy-agent": "^4.1.0",
         "qiniu": "^7.3.0",
         "request": "^2.88.2",
